Cv: updated folder structure

--- a/cv/pdf_cv/text.tex
+++ b/cv/pdf_cv/text.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt,letterpaper]{article}
 \usepackage[lmargin=2cm, rmargin=1.75cm, tmargin=2.5cm, bmargin=1.75cm]{geometry}
 
-\usepackage{assets/cv_style} %layout
+\usepackage{cv_style} %layout
 \usepackage{fontawesome} %fonts
 
 \usepackage{ragged2e} %text alignment options
