--- a/assets/cv/cv_pdf/text.tex
+++ b/assets/cv/cv_pdf/text.tex
@@ -19,7 +19,8 @@
 \usepackage{hyperref} %ref's
 \hypersetup{
     colorlinks=true,
-    urlcolor=green
+    urlcolor=green,
+    pdftitle={Ricardo Semião e Castro - CV}
 }
 
 % Others:
@@ -44,7 +45,7 @@
 \section{Educação e habilidades}
 \begin{tabular}{rl}
     Educação & Graduação em Economia --- FGV-EESP (2019 -- 2023)\\[0.3cm]
-    & Mestrado Acadêmico em Economia --- FGV-EESP (2024 -- em andamento)\\[0.3cm]
+    & Mestrado Acadêmico em Economia --- FGV-EESP (2024 -- mai/2026 \small(previsto)\normalsize)\\[0.3cm]
     Idiomas & Inglês fluente --- Certificado Cambridge English: Advanced (C1)\\[0.3cm]
     Softwares & R | Python | LaTeX | HTML/CSS | Stata | Pacote Office
 \end{tabular}
@@ -61,10 +62,8 @@
 
         \item FGV-EESP - Monitor de Econometria I
         \begin{itemize}
-            \item Aplicação de exercícios, aulas teóricas, e de R 
+            \item Aplicação de aulas teóricas, exercícios, e aulas práticas em R 
         \end{itemize}
-
-        \item Professor particular de estatística, R e Python
     \end{itemize}
 \end{minipage}
 \hfill
@@ -73,15 +72,17 @@
         \item GVCode (liga de programação na FGV)
         \begin{itemize}
             \item Coordenação de toda a atividade da liga como vice-presidente, e diretor de RH
-            \item Realização de projetos relacionados à programação e ciência de dados
+            \item Projetos de programação e ciência de dados
         \end{itemize}
-
-        \item StackOverflow - $\!\sim$260 respostas, em mais de 125 \textit{tags}; top 5\% na comunidade R
+        \item Professor particular de estatística, R, e Python
+        \begin{itemize}
+            \item StackOverflow: $\approx$260 respostas, em $\approx$125 \textit{tags}, top 5\% na comunidade R
+        \end{itemize}
     \end{itemize}
 \end{minipage}
 
 
-\subsection*{Projetos e premiações \small(\href{https://github.com/ricardo-semiao}{vide github \textmd{\faGithub}})\normalsize }
+\subsection*{Projetos e premiações \small(\href{https://ricardo-semiao.github.io/}{\textbf{vide site pessoal}})\normalsize }
 \begin{minipage}[t]{.47\textwidth}
     \begin{itemize}
         \item \href{https://github.com/ricardo-semiao/challenge-constdev}{Modelo de previsão} do fluxo de investimento na B³ com rede neural\newline
@@ -90,7 +91,7 @@
         \item Análise com regressão \textit{Ridge} e \textit{Lasso} sobre os determinantes do salário\newline
         \small \faTrophy$\;$ 1$^{\circ}$ na categoria (2020, pela EESP)\normalsize
 
-        \item Criação do pacote \href{https://ricardo-semiao.github.io/varutils/}{varutils} com funções para modelos de séries de tempo\newline
+        \item Criação do pacote \href{https://ricardo-semiao.github.io/varr/}{varr} com funções para modelos de séries de tempo\newline
         \small \textbf{--} Em desenvolvimento \normalsize
     \end{itemize}
 \end{minipage}
@@ -118,14 +119,14 @@
         \item Trabalho voluntário durante o ensino médio\\
         \small \indent Atuação em creches, asilos e hospitais\normalsize
         \item Professor voluntário no projeto EESP Ensina\\
-        \small \indent Aulas de economia para ensino médio\normalsize
+        \small \indent Aulas de economia para alunos de ensino médio\normalsize
     \end{itemize}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{.47\textwidth}
     \begin{itemize}[listparindent=\parindent]
         \item Membro do movimento escoteiro 2010-2021\\
-        \small  Desenvolvimento de atividades de cunho socioambiental
+        \small  Atividades de cunho socioambiental
     \end{itemize}
 \end{minipage}
 
